tests/incremental_json/incremental_json.exp

Initial status:
Error ----------------------------------------------------------------------------------------------------- test.js:4:20

Cannot resolve module `./data`.

   4| var data = require('./data');
                         ^^^^^^^^



Found 1 error

Create data.json:
No errors!

Modify data.json:
Error ----------------------------------------------------------------------------------------------------- test.js:5:17

Cannot assign `data.x` to `x` because string [1] is incompatible with number [2].

   test.js:5:17
   5| var x: number = data.x;
                      ^^^^^^

References:
   data.json:2:6
   2|   x: "",
           ^^ [1]
   test.js:5:8
   5| var x: number = data.x;
             ^^^^^^ [2]



Found 1 error

Delete data.json:
Error ----------------------------------------------------------------------------------------------------- test.js:4:20

Cannot resolve module `./data`.

   4| var data = require('./data');
                         ^^^^^^^^



Found 1 error

Done!
